parametros por url

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <body>
   <!-- Audio player of icecast -->
   <audio id="audio-player">
-    <source src="https://cast.hoost.com.br:20031/stream" type="audio/mpeg">
+    <!-- <source src="https://cast.hoost.com.br:20031/stream" type="audio/mpeg">
+    <source src="https://cast.hoost.com.br:20031/stream" type="audio/ogg"> -->
     <!-- <source src="https://cast.hoost.com.br:20031/live" type="audio/mpeg"> -->
     <!-- <source src="https://cast.hoost.com.br:20031/autodj" type="audio/mpeg"> -->
     Your browser does not support the audio element.
